# chunky

./: .chunkyignore  .gitignore  README.md  SETUP.md  chunky.py  install.py  package-lock.json  pyproject.toml  update_version.py  version.py
.github/workflows/: build.yml
chunks/: chunk_1.txt  chunk_2.txt
